# site

./: .gitignore  .jupytext.toml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CNAME  CONTRIBUTION_GUIDELINES.md  Makefile  README.md  authors.html  environment.html  genindex.html  index.html  make.bat  objects.inv  push.sh  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: build_website.yml  linting.yml
_sources/: index.rst
back-matter/: appendices.html  appendix-a.html  appendix-b.html  appendix-c.html  appendix-x.html  index.html
binder/: environment.yml
ci/: README.md  build-website.yaml  environment.yml  py310-book-building.yaml  py311-book-building.yaml  py312-book-building.yaml  py38-book-building.yaml  py38-build-website.yaml  py38-conda-forge.yaml  py39-book-building.yaml  update_environment.py
data/: New-Zealand-data.html  Peru-data.html  finnish-topographic-database.html  index.html  noaa-data.html
docs/: CNAME  authors.html  environment.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
front-matter/: getting-started.html  index.html  introduction.html  preface.html
part1/: index.html  old-index.html
part2/: index.html  old-index.html
part3/: index.html  old-index.html
readthedocs/: requirements.txt
source/: authors.rst  bibtex.json  conf.py  environment.rst  index.rst  install.html  page_builder.py  requirements.txt
visuals/: bit_depth.ipynb  geojson.py  map_projections.ipynb  raster_data_model.ipynb  vector_data_model_figure.ipynb  vector_vs_raster_figure.ipynb
(+1613 files in other folders)
