[metadata]
name = Introduction to Python for Geographic Data Analysis
version = 2020
license = MIT
description = Contents for the book.
author = Henrikki Tenkanen, Vuokko Heikinheimo, Dave Whipp
author_email = henrikki.tenkanen@gmail.com
url = https://pythongis.org
classifiers =
	Development Status :: 2 -
	Environment :: Web Environment
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = Python-GIS-book
github_repo = site